# 2026-typing-duel

./: Dockerfile  GEMINI.md  PRD.md  README_DEPLOY.md  TODO.md  bg.m4a  compose.yaml  game.py  game_client.js  main.py  pyproject.toml
data/: easy_words.txt  hard_words.txt
tests/: repro_issue.py  test_game_flow.py  test_insane_mode.py  test_main.py  test_practice_insane.py  test_ws_connect.py  verify_ws.py
