[project]
name = "typing_duel"
version = "0.1.0"
description = "An online typing duel game with fun interactions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-fasthtml>=0.12.39",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.5",
]